Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133398

qmlformat: Line-by-line formatter can't handle certain property definitions

    XMLWordPrintable

Details

    • cc63557a5 (dev), c35d908f1 (6.9)

    Description

       

      import QtQml
      
      QtObject {
          component C: QtObject {
              property int i
          }
      }

      The above code with a non-initialized property definition inside a component gets formatted to the following.

       

      import QtQml
      
      QtObject {
          component C: QtObject {
              property int i
          }
          }
      

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            olivier.decanniere Olivier De Cannière
            olivier.decanniere Olivier De Cannière
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes