tests/auto/qmldom/reformatter/tst_reformatter.h
@@ -217,6 +217,10 @@ private slots:
                     << QStringLiteral(u"linebreakBinaryOp.qml")
                     << QStringLiteral(u"linebreakBinaryOpReformattedWidth60.qml") << lwOptions;
         }
+        QTest::newRow("nonInitializedPropertyInComponent")
+                << "nonInitializedPropertyInComponent.qml"
+                << "nonInitializedPropertyInComponent.formatted.qml"
+                << defaultOptions;
     }
 
     void lineByLineReformatter()
